# axum-test

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
